# qt-solutions

./: CMakeLists.txt
cmake/: InstallSettings.cmake
qtled/src/: CMakeLists.txt  qtled.cpp  qtled.h  qtled.qrc  qtledplugin.cpp  qtledplugin.h  src.pro
qtpropertybrowser/: CMakeLists.txt
qtpropertybrowser/src/: CMakeLists.txt  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp
qtrangeslider/src/: CMakeLists.txt  QtRangeSlider  qtrangeslider.cpp  qtrangeslider.h  src.pro
qtsingleapplication/src/: CMakeLists.txt
qtswitch/src/: CMakeLists.txt  qtswitch.cpp  qtswitch.h  qtswitch.qrc  qtswitchplugin.cpp  qtswitchplugin.h  src.pro
